--- a/public/gameStyles.css
+++ b/public/gameStyles.css
@@ -38,9 +38,9 @@ label {
     font-family: Verdana, serif;
 }
 
-p {
+/*p {
     text-align: center;
-}
+}*/
 
 input {
     width: 100%;
@@ -64,6 +64,20 @@ div[class=form] {
 button[class=form] {
     border-radius: 12px;
     background-color: firebrick;
+    border: 1px solid black;
+    font-size: 25px;
+    width: 30%;
+    transition-duration: 0.4s;
+    margin-top: 25px;
+    margin-right: 15px;
+    margin-left: 15px;
+    opacity: 0.7;
+    height: 50px;
+}
+
+button[class=form]:disabled{
+    border-radius: 12px;
+    background-color: lightgrey;
     border: 1px solid black;
     font-size: 25px;
     width: 30%;
